# Aufgabe-Systemname-Software

./: README.md
Aliquot/: aliquot.c
Bid/: main.c
BurningShip/: CMakeLists.txt  burning_ship.c  burning_ship.h  main.c
Copy/: main.c
ExtractComments/: main.c
FindNewest/: main.c
Grundy/: grundy.c  macros.h  sailor.c  strophe.h
KomischesStaedteEntfernungsrateSpiel/: distances.c  gemeinden.txt  hash.c  main.c  vorlage.c
KomischesStädteRateSpiel/: main.c  staedte
ShackShock/: game.c  gold-cult.h  hard-fist.h  shack-shock.h
Sortthings/: sortthings.c  staedte
Sum/: sum.c
